# Currency

./: CMakeLists.txt  currency.qbs
lib_currencyAF/: CMakeLists.txt  currencyByDate.cpp  currencyData.cpp  currencyType.cpp  currencyUpdater.cpp  lib_currencyAF.qbs
lib_currencyAF/include/: AFcurrencyLib  currencyByDate.h  currencyType.h  currencyUpdater.h
lib_currencyAF/include/AFcurrency/: AfCurrencyByDate  AfCurrencyData  AfCurrencyType
lib_currencyAF/include/lib_currencyAF/: currencyByDate.h  currencyData.h  currencyType.h
server_currency/: CMakeLists.txt  currencyHttpServer.cpp  currencyHttpServer.h  main.cpp  rc.qrc  serverHost.cpp  serverHost.h
server_currency/data/by_month/: 1999_01.afd  1999_02.afd  1999_03.afd  1999_04.afd  1999_05.afd  1999_06.afd  1999_07.afd  1999_08.afd  1999_09.afd  1999_10.afd  1999_11.afd  1999_12.afd  2000_01.afd  2000_02.afd  2000_03.afd  2000_04.afd  2000_05.afd  2000_06.afd  2000_07.afd  2000_08.afd  2000_09.afd  2000_10.afd  2000_11.afd  2000_12.afd  2001_01.afd  2001_02.afd  2001_03.afd  2001_04.afd  2001_05.afd  2001_06.afd  2001_07.afd  2001_08.afd  2001_09.afd  2001_10.afd  2001_11.afd  2001_12.afd  2002_01.afd  2002_02.afd  2002_03.afd  2002_04.afd  (+215 more)
test_currencyAF/: CMakeLists.txt  main.cpp  test_currencyAF.qbs
